# sodiumoxide_extras

./: Cargo.toml
.cargo/: config
libsodium2-sys/: Cargo.toml  build.rs  lib.rs
sodium-sys/: .gitignore  Cargo.toml  build.rs  lib.rs  minisign  sources.txt  update_libsodium.sh
src/: lib.rs
