[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
build = "build.rs"
description = "FFI binding to libsodium."
documentation = "http://docs.maidsafe.net/sodiumoxide_extras/latest"
homepage = "http://maidsafe.net"
license = "GPL-3.0"
# links = "sodium"
name = "sodium-sys"
readme = "README.md"
repository = "https://github.com/maidsafe/sodiumoxide_extras"
version = "0.0.1"

[build-dependencies]
gcc = "~0.3.28"
unwrap = "~1.1.0"

[dependencies]
libc = "~0.2.12"

[lib]
name = "sodium_sys"
path = "lib.rs"
